--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
@@ -1,4 +1,4 @@
-@namespace SwashbucklerDiary.Rcl.Components
+﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits CardComponentBase<DiaryModel>
 
 <MCard Class="diary-card elevation-sm-2--active"
