🐛 fix: Some background colors are incorrect

--- a/src/SwashbucklerDiary.Maui/wwwroot/css/status-bar-and-navigation-bar.css
+++ b/src/SwashbucklerDiary.Maui/wwwroot/css/status-bar-and-navigation-bar.css
@@ -25,7 +25,7 @@ body {
         width: 100%;
         bottom: calc(0px - var(--saib));
         position: absolute;
-        background-color: var( --m-theme-surface);
+        background-color: rgba(var(--m-theme-surface));
     }
 
 .m-bottom-navigation-hidden {
