--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -7,7 +7,7 @@
 }
 
 .vditor-toolbar {
-    background: var(--m-theme-surface) !important;
+    background: rgba(var(--m-theme-surface)) !important;
     padding-left: 0px !important;
     border: none;
 }
@@ -30,7 +30,7 @@
 }
 
 .vditor-reset {
-    background-color: var(--m-theme-surface) !important;
+    background-color: rgba(var(--m-theme-surface)) !important;
     border-radius: 8px;
     padding-left: 0px !important;
     padding-right: 0px !important;
